--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -3866,7 +3866,7 @@ body.vjs-full-window {
 .mal {
   margin-left: 20px;
 }
-.container {
+body > .container {
   margin-bottom: 100px;
 }
 img.img-polaroid {
